# glint

./: .gitignore  CMakeLists.txt  README.md
glintctl/: CMakeLists.txt
glintctl/src/: glintctl.cpp  main.cpp
glintctl/src/common/: constants.h  endpoint.cpp  endpoint.h  json_builder.cpp  json_builder.h  transport.h
glintctl/src/linux/: transport_unix.cpp
glintctl/src/windows/: transport_win.cpp
glintd/: CMakeLists.txt
glintd/src/: main.cpp
glintd/src/common/: buffer_merger.cpp  buffer_merger.h  capture_base.cpp  capture_base.h  config.cpp  config.h  constants.h  db.cpp  db.h  detector.cpp  detector.h  encoder.h  encoder_ffmpeg.cpp  encoder_ffmpeg.h  expected.h  ffmpeg_common.h  frame_types.h  ipc_server.h  ipc_server_pipe.h  ipc_server_stdin.cpp  ipc_server_stdin.h  logger.cpp  logger.h  marker_manager.cpp  marker_manager.h  muxer.h  recorder.cpp  recorder.h  recording_pipeline.cpp  recording_pipeline.h  replay_buffer.cpp  replay_buffer.h
glintd/src/common/ff/: audio_capture_ffmpeg.cpp  audio_capture_ffmpeg.h  encoder_ffmpeg.cpp  encoder_ffmpeg.h  muxer_avformat.cpp  muxer_avformat.h
glintd/src/linux/: capture_linux_stub.cpp  ipc_server_pipe_unix.cpp
glintd/src/rpc/: handlers.cpp  handlers.h
glintd/src/windows/: audio_wasapi.cpp  capture_dxgi.cpp  capture_dxgi_stub.cpp  ipc_server_pipe_win.cpp  ks_guids.cpp
